bug 249107 directory listings coming from session history (cache?) displayed in raw form r=jst sr=darin